tests/negative/neg_imported_inout_double_move.safe
-- Expected: REJECT double_move
with Provider_Imported_Call_Ownership;

package Neg_Imported_Inout_Double_Move is

   function Run is
      Owner : Provider_Imported_Call_Ownership.Payload_Ptr =
        new ((Value = 5) as Provider_Imported_Call_Ownership.Payload);
   begin
      Provider_Imported_Call_Ownership.Consume (Owner);
      Provider_Imported_Call_Ownership.Consume (Owner);
   end Run;

end Neg_Imported_Inout_Double_Move;
